<resources>
    <string name="app_name">WD-mobile</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_news">Aktualności</string>
    <string name="menu_grade">Oceny</string>
    <string name="menu_finances">Finanse</string>
    <string name="menu_semestr">Semestr:</string>
    <string name="menu_lesson">Plan Lekcji</string>
    <string name="menu_more">Więcej</string>
    <string name="menu_personnel">Personel szkolny</string>
    <string name="menu_info">Informacje</string>
    <string name="actitle_tivity_selected">Informacja</string>
    <string name="menu_log_out">WYLOGUJ</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_bug_report">BugReportActivity</string>
    <string name="semestr">Semestr:</string>
</resources>
