<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_news"
        android:icon="@drawable/ic_fiber_new_black_24dp"
        android:title="@string/menu_news" />

    <item
        android:id="@+id/nav_grade"
        android:icon="@drawable/ic_assignment_black_24dp"
        android:title="@string/menu_grade" />

    <item
        android:id="@+id/nav_finances"
        android:icon="@drawable/ic_account_balance_wallet_black_24dp"
        android:title="@string/menu_finances" />

    <item
        android:id="@+id/nav_lesson"
        android:icon="@drawable/ic_event_black_24dp"
        android:title="@string/menu_lesson"
       />

    <item
        android:id="@+id/nav_more"
        android:icon="@drawable/ic_apps_black_24dp"
        android:title="@string/menu_more"
        />


</menu>
