<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_blank"
    >

    <fragment
        android:id="@+id/nav_news"
        android:name="com.wsiz.wirtualny.view.News.NewsFragment"
        android:label="@string/menu_news"
        tools:layout="@layout/fragment_news" >
    </fragment>

    <fragment
        android:id="@+id/nav_grade"
        android:name="com.wsiz.wirtualny.view.Grade.GradeFragment"
        android:label="@string/menu_grade"
        tools:layout="@layout/fragment_grade" >
    </fragment>

    <fragment
        android:id="@+id/nav_finances"
        android:name="com.wsiz.wirtualny.view.Finances.FinancesFragment"
        android:label="@string/menu_finances"
        tools:layout="@layout/fragment_finances" >
    </fragment>

    <fragment
        android:id="@+id/nav_lesson"
        android:name="com.wsiz.wirtualny.view.Lesson.LessonFragment"
        android:label="@string/menu_lesson"
        tools:layout="@layout/fragment_lesson" />

    <fragment
        android:id="@+id/nav_more"
        android:name="com.wsiz.wirtualny.view.More.MoreFragment"
        android:label="@string/menu_more"
        tools:layout="@layout/fragment_more" />

    <fragment
        android:id="@+id/nav_blank"
        android:name="com.wsiz.wirtualny.view.Blank.BlankFragment"
        android:label="@string/menu_more"
        tools:layout="@layout/fragment_blank" />

    <fragment
        android:id="@+id/nav_info"
        android:name="com.wsiz.wirtualny.view.Info.InfoFragment"
        android:label="@string/menu_info"
        tools:layout="@layout/fragment_info" >
    </fragment>
</navigation>